fix(dropdown): chevron alignment and transition, show x when closed and has search

--- a/src/common/scss/form-input.scss
+++ b/src/common/scss/form-input.scss
@@ -220,7 +220,7 @@ textarea {
   }
 
   &.dropdown-clear {
-    right: 55px;
+    right: 48px;
     width: 24px;
   }
 
