--- a/src/components/reusable/dropdown/dropdown.scss
+++ b/src/components/reusable/dropdown/dropdown.scss
@@ -147,16 +147,17 @@ slot[name='icon']::slotted(*) {
 }
 
 .arrow-icon {
-  position: absolute;
-  top: 50%;
-  right: 16px;
-  transform: translateY(-45%);
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  position: absolute;
+  top: 50%;
+  right: 16px;
+  transform: translateY(-50%);
+  transition: transform 150ms ease-out;
 
   .open & {
-    transform: translateY(-70%) rotate(180deg);
+    transform: translateY(-50%) rotate(-180deg);
   }
 }
 
